<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Shopping List</string>
    <string name="add_item">Add Item</string>
    <string name="shopping_bags">Shopping Bags</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="add">ADD</string>
    <string name="amount">Amount</string>
    <string name="name">Name</string>
    <string name="add_a_new_shopping_item">Add a new shopping item</string>
    <string name="text_view">Text View</string>
    <string name="delete_item">Delete item</string>
    <string name="increase_item_amount">Increase item amount</string>
    <string name="decrease_item_amount">Decrease item amount</string>
    <string name="profile">Your Profile</string>
    <string name="display_name">Name:</string>
    <string name="display_email">Email:</string>
    <string name="delete_account">Delete Account</string>
    <string name="once_deleted_warning">Once deleted your account can not be recovered and all the data will be lost</string>
    <string name="background">background</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_acc">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="or">or</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_now">Sign in now!</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="delete">DELETE</string>
</resources>